Final version of Perejaslavl talk?

--- a/conferences/altlinux-2014/epam.tex
+++ b/conferences/altlinux-2014/epam.tex
@@ -74,10 +74,10 @@
 
 \end{frame}
 
-\section[2012]{Курс 2012-2013}
+\subsection[2012]{Курс 2012-2013}
 
 \begin{frame}
-  \frametitle{Первый набор}
+  \frametitle{Первый набор (2012-2013)}
   \begin{columns}
     \column{0.5\textwidth}
 	\includegraphics[width=\textwidth]{epam-evm_lab512}
@@ -112,9 +112,9 @@
   \includegraphics[width=\textwidth]{anketa.png}
 \end{frame}
 
-\section[2013]{Курс 2013-2014}
+\subsection[2013]{Курс 2013-2014}
 \begin{frame}
-\frametitle{Второй набор}
+\frametitle{Второй набор (2013-2014)}
 
   \begin{columns}
 
