--- a/conferences/altlinux-2014/problem-description.tex
+++ b/conferences/altlinux-2014/problem-description.tex
@@ -62,12 +62,28 @@
 				Слишком медленно.
 		\end{itemize}
 	\end{block}
-
+        \pause
 	\begin{block}{Решение}
 		\begin{itemize}
 			\item Самостоятельная планомерная подготовка специалистов
 			\item Создание благоприятной экосистемы для самозарождения
 		\end{itemize}
 	\end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]{Заинтересованные стороны}
+
+	  \begin{itemize}
+		\item MLUG
+		\item EPAM Systems
+		\item SaM-Solutions
+		\item Promwad
+		\item БГУИР
+		\item БГУ
+                \item ???
+	  \end{itemize}
+
+
 \end{frame}
 
