--- a/conferences/altlinux-2014/collaborative-work.tex
+++ b/conferences/altlinux-2014/collaborative-work.tex
@@ -1,3 +1,12 @@
+\begin{frame}{Конкуренция между компаниями}
+
+  \center\Large\alert{Конкуренции -- нет}
+
+  \center\includegraphics[height=0.7\textheight]{penguin}
+
+\end{frame}
+
+
 \begin{frame}{Collaboration Initiative}
 
   \begin{center}
@@ -13,20 +22,10 @@
   \end{center}
 
 \end{frame}
-
-\begin{frame}{Конкуренция между компаниями}
-
-  \center\Large\alert{Конкуренции -- нет}
-
-  \center\includegraphics[height=0.7\textheight]{penguin}
-
-\end{frame}
-
-
-\begin{frame}[fragile]{Публикация результатов}
+\begin{frame}{Публикация результатов}
 
   \begin{center}
-	  \begin{block}{Ранняя публикация результатов}
+	  \begin{block}{Ранняя публикация}
 		  {\Large Release early, release often}
 	  \end{block}
 
@@ -41,77 +40,5 @@
 	  \end{block}
 
   \end{center}
-
-\end{frame}
-
-
-\begin{frame}[fragile]{Эволюция}
-
-  \begin{columns}
-
-	  \column{0.35\textwidth}
-
-	  \begin{center}
-		{\Large февраль 2013}
-	  \end{center}
-
-	  \begin{itemize}
-		\item 6 авторов
-		\item 177 коммитов
-		\item 1.5 курса
-	  \end{itemize}
-
-	  \begin{itemize}
-		\item MLUG
-		\item Epam (БГУИР)
-		\item SaM-Solutions
-		\item[]
-	  \end{itemize}
-
-    \column{0.35\textwidth}
-
-	  \begin{center}
-		{\Large январь 2014}
-	  \end{center}
-
-	  \begin{itemize}
-		\item 14 авторов
-		\item 312 коммитов
-		\item 3.5 курса
-	  \end{itemize}
-
-	  \begin{itemize}
-		\item MLUG
-		\item Epam (БГУИР)
-		\item SaM-Solutions
-		\item Promwad (БГУ)
-	  \end{itemize}
-
-  \end{columns}
-
-\end{frame}
-
-
-
-\begin{frame}{Call for partnership}
-  
-  \begin{center}
-    Открытый проект 'Linux образование' предлагает воспользоваться имеющимися материалами.
-    
-    \includegraphics[width=0.6\textwidth]{copying}
-  \end{center}
-
-  А также с благодарностью примет:
-  \begin{itemize}
-    \item на хранение, распространение и доработку курсы
-      \begin{itemize}
-	\item незаконченные и готовые
-	\item одноразовые и умершие
-	\item осиротевшие
-      \end{itemize}
-    \item патчи
-    \item баг-репорты
-    \item pull-request'ы
-  \end{itemize}
 
 \end{frame}
