--- a/conferences/altlinux-2014/linux_education_perejaslavl.tex
+++ b/conferences/altlinux-2014/linux_education_perejaslavl.tex
@@ -19,11 +19,78 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section[Проблема]{Проблема Linux-образования}
 \mode<all>{\input{problem-description}}
-\section[Epam]{Курсы по Linux от Epam}
-\mode<all>{\input{epam}}
 \section{Сотрудничество}
 \mode<all>{\input{collaborative-work}}
+\section[Epam]{Курсы по Linux от Epam}
+\mode<all>{\input{epam}}
+\section{Развитие проекта}
+\begin{frame}[fragile]{Эволюция}
 
+  \begin{columns}
+
+	  \column{0.35\textwidth}
+
+	  \begin{center}
+		{\Large февраль 2013}
+	  \end{center}
+
+	  \begin{itemize}
+		\item 6 авторов
+		\item 177 коммитов
+		\item 1.5 курса
+	  \end{itemize}
+
+	  \begin{itemize}
+		\item MLUG
+		\item Epam (БГУИР)
+		\item SaM-Solutions
+		\item[]
+	  \end{itemize}
+
+    \column{0.35\textwidth}
+
+	  \begin{center}
+		{\Large январь 2014}
+	  \end{center}
+
+	  \begin{itemize}
+		\item 14 авторов
+		\item 312 коммитов
+		\item 3.5 курса
+	  \end{itemize}
+
+	  \begin{itemize}
+		\item MLUG
+		\item Epam (БГУИР)
+		\item SaM-Solutions
+		\item Promwad (БГУ)
+	  \end{itemize}
+
+  \end{columns}
+
+\end{frame}
+\begin{frame}{Call for partnership}
+  
+  \begin{center}
+    Открытый проект 'Linux образование' предлагает воспользоваться имеющимися материалами.
+    
+    \includegraphics[width=0.6\textwidth]{copying}
+  \end{center}
+
+  А также с благодарностью примет:
+  \begin{itemize}
+    \item на хранение, распространение и доработку курсы
+      \begin{itemize}
+	\item незаконченные и готовые
+	\item одноразовые и умершие
+	\item осиротевшие
+      \end{itemize}
+    \item патчи
+    \item баг-репорты
+    \item pull-request'ы
+  \end{itemize}
+
+\end{frame}
 \begin{frame}[fragile]{}
 
   \Large \alert{Вопросы?}  \footnote{Авторы благодарят ex-сотрудника компании SaM-Solutions \\
