--- a/slides/elf-analysis/example.tex
+++ b/slides/elf-analysis/example.tex
@@ -6,6 +6,6 @@
 	\begin{block}{Жертва обстоятельств}
 		Для анализа понадобится пример из занятия по введению в gcc.\\
 		Пример доступен по адресу:\\
-		 \url{https://github.com/d4s/linux\_courses/tree/master/epam/examples/make/linking}
+		 \url{https://github.com/epam-llpd/linux\_courses/tree/master/epam/examples/make/linking}
 	\end{block}
 \end{frame}
