--- a/slides/debug/backtrace.tex
+++ b/slides/debug/backtrace.tex
@@ -1,21 +1,123 @@
 %%
 %% 
+\begin{frame}[fragile]
+	\frametitle{Встроенные функции gcc}
+
+	\begin{block}{Адрес возврата ({\tt gcc})}
+		
+		Встроенные в {\tt gcc} функции для получения адреса вызывающей функции:
+
+	\begin{lstlisting}
+void * __builtin_return_address (unsigned int level);
+	\end{lstlisting}
+	\end{block}
+
+	\begin{block}{Пример}
+	
+	Добавить в функцию {\tt second()} код:
+
+	\begin{lstlisting}
+printf("Frame 0: %p\n",  __builtin_return_address(0));
+printf("Frame 1: %p\n",  __builtin_return_address(1));
+printf("Frame 2: %p\n",  __builtin_return_address(2));
+printf("Frame 3: %p\n",  __builtin_return_address(3));
+	\end{lstlisting}
+	\end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{{\tt addr2line}}
+
+	\begin{block}{Перевод адреса в строку}
+		{\tt addr2line <address>}
+
+		\begin{itemize}
+			\item {\tt -e filename} -- бинарный файл
+			\item {\tt -f} -- показать имена функций 
+			\item {\tt -i} -- для inline функций -- показывать первую не встроенную
+			\item {\tt -C} -- нормальные имена для "искалеченных" (C++) функций
+		\end{itemize}
+	\end{block}
+
+	\begin{block}{Упражнение}
+
+		\begin{itemize}
+			\item Вызвать {\tt addr2line}, передав туда адреса, полученные из {\tt \_\_builtin\_return\_address()}.
+			\item Перекомпилировать с флагом {\tt -g}
+			\item Повторить вызов {\tt addr2line}
+		\end{itemize}
+
+	\end{block}
+
+\end{frame}
+
+%\begin{frame}[fragile]
+%	\frametitle{Пример}
+%
+%	\begin{block}{Вывод {\tt backtrace}}
+%	\begin{verbatim}
+%./backtrace() [0x400c3e]
+%/lib64/libc.so.6(+0x350f0) [0x7fb5711450f0]
+%./backtrace(fill_random_ascii_buffer+0x40) [0x400d11]
+%./backtrace(main+0xc9) [0x400dfe]
+%	\end{verbatim}
+%
+%	\end{block}
+%	\begin{block}{Вызов {\tt addr2line}}
+%	\begin{verbatim}
+%addr2line -e backtrace -ifC 0x400c3e
+%	\end{verbatim}
+%
+%	\end{block}
+%
+%\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Добавим ошибку}
+
+	\begin{block}{Ошибка}
+	
+	\begin{lstlisting}
+void second (void) {
+  char *buf;
+  sprintf( buf, "Hello, world!\n");
+}
+	\end{lstlisting}
+	\end{block}
+	
+	\pause
+
+	\begin{block}{И обработчик}
+	\begin{lstlisting}
+void sighandler( int signal) {
+  printf("SIGSEGV received, exiting.\n");
+  exit(1);
+}
+int main (void) {
+  signal (SIGSEGV, sighandler);
+	\end{lstlisting}
+	\end{block}
+
+\end{frame}
+
+
 
 \begin{frame}[fragile]
 	\frametitle{BackTrace}
 
 	\begin{block}{Backtrace}
-		Список вызовов функций.
+		Список вызовов функций\footnote{{\tt backtrace\_symbols} -- может не работать при проблемах с памятью!}.
+
 	\end{block}
 
 	\begin{lstlisting}
-#include< execinfo.h>
+#include <execinfo.h>
 
 int backtrace (void **buffer, int size);
 char ** backtrace_symbols (void *const *buffer, int size);
 void backtrace_symbols_fd (void *const *buffer, int size, int fd);
 	\end{lstlisting}
-
 \end{frame}
 
 \begin{frame}[fragile]
@@ -35,70 +137,11 @@ trace_msg = backtrace_symbols( trace,  trace_size);
 for( i=0; i<trace_size; i++) printf("%s\n",  trace_msg[i]);
 
 free( trace_msg);
+
+backtrace_symbols_fd( trace, trace_size, STDERR_FILENO);
 	\end{lstlisting}
 
-
 	\end{block}
-\end{frame}
-
-\begin{frame}[fragile]
-	\frametitle{Встроенные функции gcc}
-
-	\begin{block}{Адрес возврата ({\tt gcc})}
-		
-		Встроенные в {\tt gcc} функции для получения адреса вызывающей функции:
-
-	\begin{lstlisting}
-void * __builtin_return_address (unsigned int level);
-	\end{lstlisting}
-	\end{block}
-
-	\begin{block}{Пример}
-		
-	\begin{lstlisting}
-printf("Frame 0: PC=%p\n",  __builtin_return_address(0));
-printf("Frame 1: PC=%p\n",  __builtin_return_address(1));
-printf("Frame 2: PC=%p\n",  __builtin_return_address(2));
-printf("Frame 3: PC=%p\n",  __builtin_return_address(3));
-	\end{lstlisting}
-	\end{block}
-
-\end{frame}
-
-\begin{frame}[fragile]
-	\frametitle{{\tt addr2line}}
-
-	\begin{block}{Перевод адреса в строку}
-		{\tt addr2line <address>}
-
-		\begin{itemize}
-			\item {\tt -e filename} -- бинарный файл
-			\item {\tt -f} -- показать имена функций 
-			\item {\tt -i} -- для inline функций -- показывать первую не встроенную
-			\item {\tt -C} -- нормальные имена для "искалеченных" (C++) функций
-		\end{itemize}
-	\end{block}
-\end{frame}
-
-\begin{frame}[fragile]
-	\frametitle{Пример}
-
-	\begin{block}{Вывод {\tt backtrace}}
-	\begin{verbatim}
-./backtrace() [0x400c3e]
-/lib64/libc.so.6(+0x350f0) [0x7fb5711450f0]
-./backtrace(fill_random_ascii_buffer+0x40) [0x400d11]
-./backtrace(main+0xc9) [0x400dfe]
-	\end{verbatim}
-
-	\end{block}
-	\begin{block}{Вызов {\tt addr2line}}
-	\begin{verbatim}
-addr2line -e backtrace -ifC 0x400c3e
-	\end{verbatim}
-
-	\end{block}
-
 \end{frame}
 
 
