--- a/slides/debug/intro.tex
+++ b/slides/debug/intro.tex
@@ -1,8 +1,8 @@
 \begin{frame}
   \frametitle{Инструменты отладки}
   \begin{itemize}
-   \item printf
    \item Функциональный стиль + unit tests
+   \item Трассировка вызовов
    \item gdb
    \item valgrind
   \end{itemize}
