--- a/slides/debug/strace.tex
+++ b/slides/debug/strace.tex
@@ -1,3 +1,13 @@
+% Copyright (C) 2012-2014  Denis Pynkin <denis_pynkin@epam.com>
+% Copyright (C) 2012-2014  Yury Adamov  <yury_adamov@epam.com>
+
+% Copyright (C) 2012-2013  Dmitry V. Levin <ldv@altlinux.org>
+% Permission is granted to copy, distribute and/or modify this document
+% under the terms of the GNU Free Documentation License, Version 1.2
+% or any later version published by the Free Software Foundation;
+% with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+
+
 \begin{frame}[fragile]
   \frametitle{strace, ltrace}
   \begin{center}
@@ -35,14 +45,352 @@
  \end{itemize}
 \end{frame}
 
-\begin{frame}
- \frametitle{Упражнение}
- \begin{enumerate}
-   \item Выяснить, какие конфигурационные файлы пытается открыть \texttt{vim}
-   \item В каком системном вызове проводит больше всего времени \texttt{ls /usr/bin/}. То же для \texttt{ls -l /usr/bin}
-   \item Повторить предыдущий пункт для библиотечных вызовов.
-   \item Попробовать различные представления времени: {\tt -r}, {\tt -t},{\tt -tt},{\tt -ttt}.
- \end{enumerate}
+%\begin{frame}
+% \frametitle{Упражнение}
+% \begin{enumerate}
+%   \item Выяснить, какие конфигурационные файлы пытается открыть \texttt{vim}
+%   \item В каком системном вызове проводит больше всего времени \texttt{ls /usr/bin/}. То же для \texttt{ls -l /usr/bin}
+%   \item Повторить предыдущий пункт для библиотечных вызовов.
+%   \item Попробовать различные представления времени: {\tt -r}, {\tt -t},{\tt -tt},{\tt -ttt}.
+% \end{enumerate}
+%\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -P, -e trace=file}
+\scriptsize
+\begin{verbatim}
+$ strace -e file ls /var/empty
+execve("/bin/ls", ["ls", "/var/empty"], [/* 32 vars */]) = 0
+access("/etc/ld.so.preload", R_OK)      = -1 ENOENT (No such file or directory)
+open("/etc/ld.so.cache", O_RDONLY)      = 3
+open("/lib64/libtinfo.so.5", O_RDONLY)  = 3
+open("/lib64/libselinux.so.1", O_RDONLY) = 3
+open("/lib64/librt.so.1", O_RDONLY)     = 3
+open("/lib64/libcap.so.2", O_RDONLY)    = 3
+open("/lib64/libacl.so.1", O_RDONLY)    = 3
+open("/lib64/libc.so.6", O_RDONLY)      = 3
+open("/lib64/libdl.so.2", O_RDONLY)     = 3
+open("/lib64/libpthread.so.0", O_RDONLY) = 3
+open("/lib64/libattr.so.1", O_RDONLY)   = 3
+stat("/var/empty", {st_mode=S_IFDIR|0555, st_size=4096, ...}) = 0
+open("/var/empty", O_RDONLY|O_NONBLOCK|O_DIRECTORY|O_CLOEXEC) = 3
++++ exited with 0 +++
+\end{verbatim}
+
+\begin{verbatim}
+$ strace -P /etc/ld.so.cache ls /var/empty
+open("/etc/ld.so.cache", O_RDONLY)      = 3
+fstat(3, {st_mode=S_IFREG|0644, st_size=22446, ...}) = 0
+mmap(NULL, 22446, PROT_READ, MAP_PRIVATE, 3, 0) = 0x2b7ac2ba9000
+close(3)                                = 0
++++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -P, -v}
+\scriptsize
+\begin{verbatim}
+$ strace -P /var/empty ls /var/empty
+stat("/var/empty", {st_mode=S_IFDIR|0555, st_size=4096, ...}) = 0
+open("/var/empty", O_RDONLY|O_NONBLOCK|O_DIRECTORY|O_CLOEXEC) = 3
+fcntl(3, F_GETFD)                       = 0x1 (flags FD_CLOEXEC)
+getdents(3, /* 2 entries */, 32768)     = 48
+getdents(3, /* 0 entries */, 32768)     = 0
+close(3)                                = 0
++++ exited with 0 +++
+\end{verbatim}
+
+\begin{verbatim}
+$ strace -P /var/empty -v ls /var/empty
+stat("/var/empty", {st_dev=makedev(0, 30), st_ino=1020461,
+  st_mode=S_IFDIR|0555, st_nlink=2, st_uid=0, st_gid=0, st_blksize=4096,
+  st_blocks=8, st_size=4096, st_atime=2012/07/22-14:21:04,
+  st_mtime=2012/05/17-19:22:58, st_ctime=2012/05/17-19:24:07}) = 0
+open("/var/empty", O_RDONLY|O_NONBLOCK|O_DIRECTORY|O_CLOEXEC) = 3
+fcntl(3, F_GETFD)                       = 0x1 (flags FD_CLOEXEC)
+getdents(3, {{d_ino=799280, d_off=1551270678, d_reclen=24, d_name=".."}
+  {d_ino=1020461, d_off=2147483647, d_reclen=24, d_name="."}}, 32768) = 48
+getdents(3, {}, 32768)                  = 0
+close(3)                                = 0
++++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -y, -e trace=}
+\scriptsize
+%\tiny
+\begin{verbatim}
+$ strace -e fstat,close -y ls /var/empty >/dev/null
+fstat(3</etc/ld.so.cache>, {st_mode=S_IFREG|0644, st_size=22446, ...}) = 0
+close(3</etc/ld.so.cache>)              = 0
+fstat(3</lib/libtinfo.so.5.7>, {st_mode=S_IFREG|0644, st_size=135352, ...}) = 0
+close(3</lib/libtinfo.so.5.7>)        = 0
+fstat(3</lib/libselinux.so.1>, {st_mode=S_IFREG|0644, st_size=121992, ...}) = 0
+close(3</lib/libselinux.so.1>)        = 0
+fstat(3</lib/librt-2.11.3.so>, {st_mode=S_IFREG|0755, st_size=31792, ...}) = 0
+close(3</lib/librt-2.11.3.so>)        = 0
+fstat(3</lib/libcap.so.2.16>, {st_mode=S_IFREG|0644, st_size=23048, ...}) = 0
+close(3</lib/libcap.so.2.16>)         = 0
+fstat(3</lib/libacl.so.1.1.0>, {st_mode=S_IFREG|0644, st_size=35376, ...}) = 0
+close(3</lib/libacl.so.1.1.0>)        = 0
+fstat(3</lib/libc-2.11.3.so>, {st_mode=S_IFREG|0755, st_size=1452024, ...}) = 0
+close(3</lib/libc-2.11.3.so>)         = 0
+fstat(3</lib/libdl-2.11.3.so>, {st_mode=S_IFREG|0755, st_size=14776, ...}) = 0
+close(3</lib/libdl-2.11.3.so>)        = 0
+fstat(3</lib/libpthread-2.11.3.so>, {st_mode=S_IFREG|0755, st_size=138064, ...}) = 0
+close(3</lib/libpthread-2.11.3.so>)   = 0
+fstat(3</lib/libattr.so.1.1.0>, {st_mode=S_IFREG|0644, st_size=18704, ...}) = 0
+close(3</lib/libattr.so.1.1.0>)       = 0
+close(3</var/empty>)                    = 0
+close(1</dev/null>)                     = 0
+close(2</dev/pts/0>)                    = 0
++++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -y, -e trace=, -e read=}
+\Tiny
+\begin{verbatim}
+$ strace -e trace=read -e read=3 -y ls /var/empty
+read(3</lib64/libtinfo.so.5.7>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\300\315\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  c0 cd 00 00 00 00 00 00  ..>..... ........ |
+ | 00320  00 00 00 00 00 00 00 00  00 00 00 00 4d 00 00 00  ........ ....M... |
+ | 00330  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  ........ ........ |
+read(3</lib64/libselinux.so.1>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\240W\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  a0 57 00 00 00 00 00 00  ..>..... .W...... |
+ | 00320  40 20 00 00 20 00 00 80  c8 84 e2 00 00 12 00 03  @ .. ... ........ |
+ | 00330  20 40 02 21 80 50 02 21  70 00 00 00 71 00 00 00   @.!.P.! p...q... |
+read(3</lib64/librt-2.11.3.so>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\200!\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  80 21 00 00 00 00 00 00  ..>..... .!...... |
+ | 00320  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  ........ ........ |
+ | 00330  00 00 00 00 48 00 00 00  00 00 00 00 49 00 00 00  ....H... ....I... |
+read(3</lib64/libcap.so.2.16>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0@\30\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  40 18 00 00 00 00 00 00  ..>..... @....... |
+ | 00320  89 71 ee b2 ee 3e 3c d4  dd e7 a8 99 18 bf 5b 17  .q...><. ......[. |
+ | 00330  7d dd 81 63 ed 16 0b 88  4d a7 3a ea f5 3e 3c d4  }..c.... M.:..><. |
+read(3</lib64/libacl.so.1.1.0>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\240\37\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  a0 1f 00 00 00 00 00 00  ..>..... ........ |
+ | 00320  47 00 00 00 00 00 00 00  48 00 00 00 4a 00 00 00  G....... H...J... |
+ | 00330  00 00 00 00 4b 00 00 00  00 00 00 00 00 00 00 00  ....K... ........ |
+read(3</lib64/libc-2.11.3.so>, "\177ELF\2\1\1\3\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\360\354\1\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 03  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  f0 ec 01 00 00 00 00 00  ..>..... ........ |
+ | 00320  80 ca 44 42 28 00 06 80  10 18 42 00 20 40 80 00  ..DB(... ..B. @.. |
+ | 00330  09 50 00 51 8a 40 10 00  00 00 00 08 00 00 11 10  .P.Q.@.. ........ |
+read(3</lib64/libdl-2.11.3.so>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\340\r\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  e0 0d 00 00 00 00 00 00  ..>..... ........ |
+ | 00320  91 21 fc f8 06 02 04 f9  fb 33 fb 0f f9 19 73 42  .!...... .3....sB |
+ | 00330  fa 19 73 42 95 b3 5f 19  7f 9e d0 18 61 a2 92 06  ..sB.._. ....a... |
+read(3</lib64/libpthread-2.11.3.so>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\360Y\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  f0 59 00 00 00 00 00 00  ..>..... .Y...... |
+ | 00320  01 05 00 50 20 a9 02 07  28 00 00 82 04 98 40 04  ...P ... (.....@. |
+ | 00330  00 10 e0 54 00 02 40 02  02 10 c1 30 44 02 80 00  ...T..@. ...0D... |
+read(3</lib64/libattr.so.1.1.0>, "\177ELF\2\1\1\0\0\0\0\0\0\0\0\0\3\0>\0\1\0\0\0\260\23\0\0\0\0\0\0"..., 832) = 832
+ | 00000  7f 45 4c 46 02 01 01 00  00 00 00 00 00 00 00 00  .ELF.... ........ |
+ | 00010  03 00 3e 00 01 00 00 00  b0 13 00 00 00 00 00 00  ..>..... ........ |
+ | 00320  bf a8 e3 f8 db 0c 16 89  bb e3 92 7c c5 e8 1b 9b  ........ ...|.... |
+ | 00330  05 c1 58 15 4b 3d 47 f3  91 78 a9 dd eb d3 ef 0e  ..X.K=G. .x...... |
++++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -r, -e trace=process}
+\scriptsize
+\begin{verbatim}
+$ strace -r /bin/true
+     0.000000 execve("/bin/true", ["/bin/true"], [/* 32 vars */]) = 0
+     0.000281 exit_group(0)             = ?
+     0.000063 +++ exited with 0 +++
+\end{verbatim}
+
+\begin{verbatim}
+# strace -r -e process unshare -i /bin/true
+     0.000000 execve("/usr/bin/unshare",
+       ["/usr/bin/unshare", "-i", "/bin/true"], [/* 32 vars */]) = 0
+     0.000899 arch_prctl(ARCH_SET_FS, 0x7f4e537cd700) = 0
+     0.000398 unshare(CLONE_NEWIPC)     = 0
+     0.000190 execve("/bin/true", ["/bin/true"], [/* 32 vars */]) = 0
+     0.000186 exit_group(0)             = ?
+     0.028931 +++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -r, -T, -f, -e trace=process}
+\Tiny
+\begin{verbatim}
+$ strace -e process -r -T sh -c 'kill $$'
+     0.000000 execve("/bin/sh", ["sh", "-c", "kill $$"], [/* 32 vars */]) = 0 <0.000361>
+     0.001185 arch_prctl(ARCH_SET_FS, 0x2b0c3236b020) = 0 <0.000008>
+     0.002239 --- SIGTERM {si_signo=SIGTERM, si_code=SI_USER, si_pid=12345, si_uid=500} ---
+     0.000218 +++ killed by SIGTERM +++
+\end{verbatim}
+
+\begin{verbatim}
+$ strace -e process -f -q sh -c 'sleep 1 & pid=$!; sleep 0.1; kill $pid; wait'
+execve("/bin/sh", ["sh", "-c", "sleep 1 & pid=$!; sleep 0.1; kil"...], [/* 32 vars */]) = 0
+arch_prctl(ARCH_SET_FS, 0x2ae37beef020) = 0
+clone(child_stack=0, flags=CLONE_CHILD_CLEARTID|CLONE_CHILD_SETTID|SIGCHLD, child_tidptr=0x2ae37beef2f0) = 10001
+[pid 10000] clone(child_stack=0, flags=CLONE_CHILD_CLEARTID|CLONE_CHILD_SETTID|SIGCHLD, child_tidptr=0x2ae37beef2f0) = 10002
+[pid 10001] execve("/bin/sleep", ["sleep", "1"], [/* 32 vars */] <unfinished ...>
+[pid 10002] execve("/bin/sleep", ["sleep", "0.1"], [/* 32 vars */] <unfinished ...>
+[pid 10001] <... execve resumed> )      = 0
+[pid 10002] <... execve resumed> )      = 0
+[pid 10000] wait4(-1,  <unfinished ...>
+[pid 10001] arch_prctl(ARCH_SET_FS, 0x2b8cf7d49b20) = 0
+[pid 10002] arch_prctl(ARCH_SET_FS, 0x2ada74416b20) = 0
+[pid 10002] exit_group(0)               = ?
+[pid 10002] +++ exited with 0 +++
+[pid 10000] <... wait4 resumed> [{WIFEXITED(s) && WEXITSTATUS(s) == 0}], 0, NULL) = 10002
+[pid 10000] --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=10002, si_status=0, si_utime=0, si_stime=0} ---
+[pid 10000] wait4(-1, 0x7fff7560e53c, WNOHANG, NULL) = 0
+[pid 10001] --- SIGTERM {si_signo=SIGTERM, si_code=SI_USER, si_pid=10000, si_uid=600} ---
+[pid 10001] +++ killed by SIGTERM +++
+--- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_KILLED, si_pid=10001, si_status=SIGTERM, si_utime=1, si_stime=0} ---
+wait4(-1, [{WIFSIGNALED(s) && WTERMSIG(s) == SIGTERM}], WNOHANG, NULL) = 10001
+wait4(-1, 0x7fff7560e58c, WNOHANG, NULL) = -1 ECHILD (No child processes)
+exit_group(0)                           = ?
++++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -ff, -ttt, -o, strace-log-merge}
+\Tiny
+\begin{verbatim}
+$ strace -e process -ff -ttt -o log sh -c 'sleep 1 & pid=$!; sleep 0.1; kill $pid; wait'
+sh: line 1: 10001 Terminated              sleep 1
+\end{verbatim}
+
+\begin{verbatim}
+$ head -1 log.*
+==> log.10000 <==
+1342993484.722384 execve("/bin/sh", ["sh", "-c", "sleep 1 & pid=$!; sleep 0.1; kil"...], [/* 32 vars */]) = 0
+==> log.10001 <==
+1342993484.727498 execve("/bin/sleep", ["sleep", "1"], [/* 32 vars */]) = 0
+==> log.10002 <==
+1342993484.727422 execve("/bin/sleep", ["sleep", "0.1"], [/* 32 vars */]) = 0
+\end{verbatim}
+
+\begin{verbatim}
+$ strace-log-merge log
+10000 1342993484.722384 execve("/bin/sh", ["sh", "-c", "sleep 1 & pid=$!; sleep 0.1; kil"...], [/* 33 vars */]) = 0
+10000 1342993484.723369 arch_prctl(ARCH_SET_FS, 0x2ad5cc1fa020) = 0
+10000 1342993484.725378 clone(child_stack=0, flags=CLONE_CHILD_CLEARTID|CLONE_CHILD_SETTID|SIGCHLD,
+  child_tidptr=0x2ad5cc1fa2f0) = 10001
+10000 1342993484.726783 clone(child_stack=0, flags=CLONE_CHILD_CLEARTID|CLONE_CHILD_SETTID|SIGCHLD,
+  child_tidptr=0x2ad5cc1fa2f0) = 10002
+10000 1342993484.727188 wait4(-1, [{WIFEXITED(s) && WEXITSTATUS(s) == 0}], 0, NULL) = 10002
+10002 1342993484.727422 execve("/bin/sleep", ["sleep", "0.1"], [/* 32 vars */]) = 0
+10001 1342993484.727498 execve("/bin/sleep", ["sleep", "1"], [/* 32 vars */]) = 0
+10002 1342993484.769744 arch_prctl(ARCH_SET_FS, 0x2acee796db20) = 0
+10001 1342993484.769845 arch_prctl(ARCH_SET_FS, 0x2b2bd019cb20) = 0
+10002 1342993484.872233 exit_group(0)         = ?
+10002 1342993484.872389 +++ exited with 0 +++
+10000 1342993484.872492 --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_EXITED, si_pid=10002, si_status=0, si_utime=0,
+  si_stime=0} ---
+10000 1342993484.872519 wait4(-1, 0x7fffe27a860c, WNOHANG, NULL) = 0
+10001 1342993484.872666 --- SIGTERM {si_signo=SIGTERM, si_code=SI_USER, si_pid=10000, si_uid=600} ---
+10000 1342993484.872795 wait4(-1, [{WIFSIGNALED(s) && WTERMSIG(s) == SIGTERM}], 0, NULL) = 10001
+10001 1342993484.872849 +++ killed by SIGTERM +++
+10000 1342993484.873117 --- SIGCHLD {si_signo=SIGCHLD, si_code=CLD_KILLED, si_pid=10001, si_status=SIGTERM,
+  si_utime=0, si_stime=0} ---
+10000 1342993484.873140 wait4(-1, 0x7fffe27a81bc, WNOHANG, NULL) = -1 ECHILD (No child processes)
+10000 1342993484.873339 exit_group(0)         = ?
+10000 1342993484.873599 +++ exited with 0 +++
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -o pipeline}
+\scriptsize
+\begin{verbatim}
+$ strace -e open -o '|grep /lib' ls /var/empty
+open("/lib64/libtinfo.so.5", O_RDONLY)  = 3
+open("/lib64/libselinux.so.1", O_RDONLY) = 3
+open("/lib64/librt.so.1", O_RDONLY)     = 3
+open("/lib64/libcap.so.2", O_RDONLY)    = 3
+open("/lib64/libacl.so.1", O_RDONLY)    = 3
+open("/lib64/libc.so.6", O_RDONLY)      = 3
+open("/lib64/libdl.so.2", O_RDONLY)     = 3
+open("/lib64/libpthread.so.0", O_RDONLY) = 3
+open("/lib64/libattr.so.1", O_RDONLY)   = 3
+\end{verbatim}
+
+\begin{verbatim}
+$ strace -e desc -y -o "|grep '</[^l]'" ls /var/empty
+fstat(3</etc/ld.so.cache>, {st_mode=S_IFREG|0644, st_size=22446, ...}) = 0
+mmap(NULL, 22446, PROT_READ, MAP_PRIVATE, 3</etc/ld.so.cache>, 0) = 0x2ab097dfb000
+close(3</etc/ld.so.cache>)              = 0
+ioctl(1</dev/pts/0>, SNDCTL_TMR_TIMEBASE or SNDRV_TIMER_IOCTL_NEXT_DEVICE or TCGETS, {B38400 opost isig icanon echo ...}) = 0
+ioctl(1</dev/pts/0>, TIOCGWINSZ, {ws_row=46, ws_col=128, ws_xpixel=1408, ws_ypixel=828}) = 0
+fcntl(3</var/empty>, F_GETFD)           = 0x1 (flags FD_CLOEXEC)
+getdents(3</var/empty>, /* 2 entries */, 32768) = 48
+getdents(3</var/empty>, /* 0 entries */, 32768) = 0
+close(3</var/empty>)                    = 0
+close(1</dev/pts/0>)                    = 0
+close(2</dev/pts/0>)                    = 0
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -p}
+\begin{verbatim}
+$ sleep 1 & sleep 1 & sleep 0.1 &&
+  strace -e process -p "$(pidof sleep)"
+[1] 10000
+[2] 10001
+Process 10001 attached
+Process 10000 attached
+[pid 10000] exit_group(0)               = ?
+[pid 10001] exit_group(0)               = ?
+[pid 10001] +++ exited with 0 +++
+[2]+  Done                    sleep 1
++++ exited with 0 +++
+[1]-  Done                    sleep 1
+
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{strace usage examples: -c, -S}
+\tiny
+\begin{verbatim}
+$ strace -c -S calls find /usr/share/doc/ > /dev/null 
+% time     seconds  usecs/call     calls    errors syscall
+------ ----------- ----------- --------- --------- ----------------
+  1.77    0.000023           0      6417         1 fcntl
+  1.85    0.000024           0      1992           close
+ 93.83    0.001216           1       982           getdents
+  1.70    0.000022           0       982           newfstatat
+  0.00    0.000000           0       520           fstat
+  0.85    0.000011           0       511           openat
+  0.00    0.000000           0        60           write
+  0.00    0.000000           0        23           mmap
+  0.00    0.000000           0        14           mprotect
+  0.00    0.000000           0         9           open
+  0.00    0.000000           0         8           read
+  0.00    0.000000           0         6           brk
+  0.00    0.000000           0         6           fadvise64
+  0.00    0.000000           0         3           munmap
+  0.00    0.000000           0         3         2 ioctl
+  0.00    0.000000           0         2           rt_sigaction
+  0.00    0.000000           0         2         1 futex
+  0.00    0.000000           0         1           rt_sigprocmask
+  0.00    0.000000           0         1         1 access
+  0.00    0.000000           0         1           execve
+  0.00    0.000000           0         1           uname
+  0.00    0.000000           0         1           fchdir
+  0.00    0.000000           0         1           gettimeofday
+  0.00    0.000000           0         1           getrlimit
+  0.00    0.000000           0         1           statfs
+  0.00    0.000000           0         1           arch_prctl
+  0.00    0.000000           0         1           set_tid_address
+  0.00    0.000000           0         1           set_robust_list
+------ ----------- ----------- --------- --------- ----------------
+100.00    0.001296                 11551         5 total
+\end{verbatim}
 \end{frame}
 
 
