Fixed array example

--- a/slides/bash/arrays.tex
+++ b/slides/bash/arrays.tex
@@ -21,7 +21,7 @@
 
 	\begin{block}{Пример: загрузить файл в массив}
 		\begin{itemize}
-			\item \verb+ array=(${cat filename)) +
+			\item \verb+ array=($(cat filename)) +
 		\end{itemize}
 	\end{block}
 
