Corrected sequence of trace/debug tools

--- a/epam/Presentation/16-debug.tex
+++ b/epam/Presentation/16-debug.tex
@@ -30,11 +30,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mode<all>{\input{../../slides/debug/intro}}
 
-\section{Отладка с помощью printf}
+\section[printf]{Трассировка с помощью printf}
 
 \mode<all>{\input{../../slides/debug/printf}}
 
-\section{GNU отладчик gdb}
-\mode<all>{\input{../../slides/debug/gdb}}
+\section[backtrace]{Просмотр списка вызовов функций (backtrace)}
+\mode<all>{\input{../../slides/debug/backtrace}}
+
+\section[strace]{Трассировка системных вызовов (strace,ltrace)}
+\mode<all>{\input{../../slides/debug/strace}}
+
 
 \end{document}
