--- a/epam/Presentation/17-debug.tex
+++ b/epam/Presentation/17-debug.tex
@@ -29,13 +29,10 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{GNU отладчик gdb}
+\mode<all>{\input{../../slides/debug/gdb}}
+
 \section{Valgrind}
 \mode<all>{\input{../../slides/debug/valgrind}}
-
-\section{Отладка системных вызовов (strace,ltrace)}
-\mode<all>{\input{../../slides/debug/strace}}
-
-\section{Просмотр списка вызовов функций (backtrace)}
-\mode<all>{\input{../../slides/debug/backtrace}}
 
 \end{document}
