--- a/slides/debug/valgrind.tex
+++ b/slides/debug/valgrind.tex
@@ -1,23 +1,5 @@
 %%
 %% 
-
-\begin{frame}
-	\frametitle{Valgrind}
-
-	\begin{block}{Что умеет Valgrind}
-		\begin{itemize}
-			\item Утечки памяти
-			\item Использование неинициализированной памяти
-			\item Чтение/запись за пределами выделенной {\tt malloc} памяти
-			\item Чтение/запись в некорректные области стека
-			\item Использование неправильных пар вуделения/удаления блоков памяти:\\
-				{\tt malloc/new/new[]} и {\tt free/delete/delete[]}
-			\item Перекрытие участков памяти при использованиии {\tt memcpy()} и др.
-			\item "Злоупотребления" {\tt API pthreads}
-		\end{itemize}
-	\end{block}
-\end{frame}
-
 \begin{frame}
 	\frametitle{Valgrind}
 
@@ -35,7 +17,64 @@
 		\end{enumerate}
 	\end{block}
 \end{frame}
-			
+	
+\begin{frame}
+	\frametitle{Valgrind Memcheck}
+
+	\begin{block}{Что умеет Memcheck}
+		\begin{itemize}
+			\item Утечки памяти
+			\item Использование неинициализированной памяти
+			\item Чтение/запись за пределами выделенной {\tt malloc} памяти
+			\item Чтение/запись в некорректные области стека
+			\item Использование неправильных пар вуделения/удаления блоков памяти:\\
+				{\tt malloc/new/new[]} и {\tt free/delete/delete[]}
+			\item Перекрытие участков памяти при использованиии {\tt memcpy()} и др.
+%			\item "Злоупотребления" {\tt API pthreads}
+		\end{itemize}
+	\end{block}
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Упражнение: запуск}
+
+	\begin{block}{Жертва}
+	Да, опять {\tt Hello, World}!!!
+
+	\end{block}
+
+	\begin{block}{Компиляция}
+		Флаги {\tt -g} и {\tt -O0}!
+
+		Hint: {\tt export CFLAGS="-g}
+	\end{block}
+
+	\begin{block}{Запуск}
+		{\tt valgrind ./prog}
+	\end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Полезные опции}
+
+	\begin{itemize}
+		\item -{}-quiet VS -{}-verbose
+		\item -{}-trace-children=yes -- дочерние процессы
+		\item -{}-log-file=<logname>
+		\item -{}-leak-check=full -- отслеживать утечки памяти 
+		\item -{}-num-callers=<backtrace depth> -- глубина "размотки" стека
+		\item -{}-track-fds=yes -- отслеживать незакрытые файлы
+		\item -{}-track-origins=yes -- отслеживать происхождение неинициализированных значений\footnote{Дорогая операция}
+		\item -{}-show-reachable=yes -- показывает неосвобожденную,  но неутекшую (есть ссылки из программы) память
+		\item -{}-malloc-fill=val и -{}-free-fill=val -- заполняет память при вызовах malloc/free
+
+	\end{itemize}
+
+\end{frame}
+
+
+		
 \begin{frame}[fragile]
 	\frametitle{Упражнение: некорректный указатель}
 
@@ -56,6 +95,29 @@ char *array;
 	Пример: {\tt inv\_ptr.c}
 
 \end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Упражнение: двойное освобождение памяти}
+
+	\begin{lstlisting}
+#include <stdlib.h>
+
+main(void)
+{
+char *array;
+
+    array = malloc(10*sizeof(char));
+    free( array);
+    free( array);
+    exit(0);
+}
+	\end{lstlisting}
+
+	Пример: {\tt dbl\_free.c}
+
+\end{frame}
+
+
 
 \begin{frame}[fragile]
 	\frametitle{Упражнение: утечки памяти}
@@ -122,6 +184,64 @@ array[10000] = 0;
 \end{frame}
 
 \begin{frame}[fragile]
+	\frametitle{Макросы в исходниках}
+	
+	\begin{lstlisting}
+#include <valgrind/valgrind.h>
+	\end{lstlisting}
+
+	\begin{itemize}
+		\item {\tt RUNNING\_ON\_VALGRIND} -- возвращает 1, если запущено в Valgrind
+		\item {\tt VALGRIND\_COUNT\_ERRORS} -- количество найденных ошибок
+		\item {\tt VALGRIND\_PRINTF(format, ...)}
+		\item {\tt VALGRIND\_PRINTF\_BACKTRACE(format, ...)}
+	\end{itemize}
+
+	\begin{lstlisting}
+#include <valgrind/memcheck.h>
+	\end{lstlisting}
+
+	\begin{itemize}
+		\item {\tt VALGRIND\_MAKE\_MEM\_NOACCESS( *addr, size)}
+		\item для работы с собственным аллокатором:\\
+		\begin{itemize}
+			\item {\tt VALGRIND\_MALLOCLIKE\_BLOCK}
+			\item {\tt VALGRIND\_FREELIKE\_BLOCK}
+			\item {\tt VALGRIND\_RESIZEINPLACE\_BLOCK}
+		\end{itemize}
+	\end{itemize}
+
+
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Упражнение: пример использования макроса}
+
+	\begin{lstlisting}
+void dobug(char *addr){
+  char *local = addr;
+  local[4]=32;
+}
+
+main(void) {
+  char addr[]="Hello,  world!!!";
+  printf("%s\n",  addr);
+  dobug( addr);
+  printf("%s\n",  addr);
+  return (0);
+}
+	\end{lstlisting}
+
+%	Пример: {\tt uninit\_addr.c}
+
+	\begin{block}{Задание}
+		Добавить макрос {\tt VALGRIND\_MAKE\_MEM\_NOACCESS()} перед вызовом {\tt dobug()}.
+	\end{block}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
 	\frametitle{GDB + Valgrind}
 
 	Valgrind запускет программы на "синтетическом" процессоре, поэтому GDB не работает!
@@ -129,7 +249,7 @@ array[10000] = 0;
 	Для отладки используется {\tt vgdb}: \\
 
 	\begin{verbatim}
-valgrind -vgdb=yes --vgdb-error=0 prog
+valgrind --vgdb=yes --vgdb-error=0 prog
 	\end{verbatim}
 
 
