- Changed tilde, not excellent, but better. - Added epoch. - Some other changes...

--- a/slides/packaging/intro.tex
+++ b/slides/packaging/intro.tex
@@ -33,18 +33,18 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Большая свалка}
+	\frametitle{Хаос}
 
 	\begin{center}
-		"Даешь каждой платформе по собственной системе управления пакетами!"
+		"Даешь каждой платформе и языку собственную систему управления пакетами!"
 	\end{center}
 
 	\begin{block}{Увы, мы не в идеальном мире}
 		\begin{itemize}
-			\item Дистрибутив: rpm... или deb... или еще что-нибудь...
+			\item Дистрибутивы: rpm\{4,5\}, deb, portage, pacman... и куча модификаций...
 			\item Дополнительный софт: {\tt ./configure; make; make install}
-			\item Java: {\tt maven, ant, ivy} 
-			\item Ruby: rubygem
+			\item Java: {\tt ivy, ant, maven, gradle}
+			\item Ruby: gem
 			\item Perl: CPAN
 			\item Python: pip + PyPi
 		\end{itemize}
