--- a/slides/packaging/rpm_syntax.tex
+++ b/slides/packaging/rpm_syntax.tex
@@ -1,28 +1,32 @@
 \begin{frame}
+%damn tilde, best that i found
+\def~{$\sim$}
 	\frametitle{Инфраструктура для разработчика}
 	
 	\begin{itemize}
 		\item Конфигурация
 			\begin{enumerate}
-				\item {\tt \~/.rpmmacros} -- информация о пакетировщике, локальные настройки
-				\item {\tt \~/RPM} -- дерево для внутреннего использования RPM
+				\item {\tt ~/.rpmmacros} -- информация о пакетировщике, локальные настройки
+				\item {\tt ~/RPM/} -- дерево для внутреннего использования RPM
 					\begin{enumerate}
-						\item {\tt SOURCES}
-						\item {\tt SPECS}
-						\item {\tt BUILD}
-						\item {\tt RPMS/\{\%arch\}}
-						\item {\tt SRPMS}
+						\item {\tt BUILD/}
+						\item {\tt BUILDROOT/}
+						\item {\tt RPMS/\%arch/}
+						\item {\tt SOURCES/}
+						\item {\tt SPECS/}
+						\item {\tt SRPMS/}
 					\end{enumerate}
 			\end{enumerate}
 		\item Исходники
 			\begin{enumerate}
 				\item Исходный код ПО 
 				\item {\tt spec} -- файл описания процесса сборки, установки, а также метаинформация
+				\item Патчи при необходимости
 			\end{enumerate}
 
 		\item На выходе
 			\begin{enumerate}
-				\item {\tt *.\{\%arch\}.rpm} -- пакеты, готовые для установки
+				\item {\tt *.\%arch.rpm} -- пакеты, готовые для установки
 				\item {\tt *.srpm} -- пакет с исходниками
 			\end{enumerate}
 
@@ -38,11 +42,12 @@
 		\item Заголовок (Тэги) -- {\tt Tag: value}
 		\item Подготовка -- {\tt \%prep + \%setup}
 		\item Сборка -- {\tt \%build}
+		\item Проверка -- {\tt \%check}
 		\item Установка -- {\tt \%install}
-		\item Секция {\tt \%files}
+		\item Файлы --{\tt \%files}
 		\item Скрипты, выполняемые в различных условиях\\
 			{\tt pre-,post-install, uninstall, trigger}
-		\item Список изменений -- {\tt \%changelog }
+		\item Изменения -- {\tt \%changelog }
 	\end{itemize}
 
 \end{frame}
@@ -52,12 +57,12 @@
 
 	\begin{block}{ Зависимости}
 		\begin{itemize}
-			\item {\tt BuildReq:}
+			\item {\tt BuildRequires:}
 			\item {\tt Requires:}
 			\item {\tt Provides:}
 			\item {\tt Conflicts:}
 			\item {\tt Obsoletes:}
-			\item {\tt AutoReq: (0|1)}
+			\item {\tt AutoReqProv: (0|1)}
 		\end{itemize}
 	\end{block}
 
@@ -66,21 +71,19 @@
 \begin{frame}
 	\frametitle{версии}
 
-	\Large{Чтение полиси соответствующего дистрибутива строго обязательно!}
+	\Large{Чтение правил дистрибутива строго обязательно!}
 
-	Hint: {\tt rpmvercmp}
-
+	Hint: {\tt rpmdev-vercmp (rpmdevtools)}
 	\begin{block}{ Версия -- составная}
-
-		{\tt \%name-\%version-\%release}
-
+		{\tt \%name-\%epoch:\%version-\%release}
 		\begin{itemize}
 			\item {\tt \%name}
+			\item {\tt \%epoch}
 			\item {\tt \%version}
 			\item {\tt \%release}
 			\begin{itemize}
-				\item release
-				\item dist tag
+				\item Release:
+				\item \%\{?dist\} tag
 				\item rebuild number -- автоматически (при использовании нормальных билд-систем)
 			\end{itemize}
 		\end{itemize}
@@ -91,7 +94,7 @@
 
 
 \begin{frame}
-	\frametitle{Hello, World!}
+	\frametitle{Пример 1: Hello, World!}
 
 	\begin{block}{Упражнение: hello.spec}
 		\begin{itemize}
@@ -112,11 +115,10 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Пример2}
+	\frametitle{Пример 2}
 
-
-	\begin{block}{Субпакеты, скрипты, зависимости и апгрейд}
-		На примере {\tt template.spec}.
+	\begin{block}{Подпакеты, скрипты, зависимости и обновление}
+		На примере {\tt template.spec}
 
 		\begin{itemize}
 			\item Собрать пакет с помощью {\tt rpmbuild -ba template.spec}
@@ -129,11 +131,11 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Упражнение}
+	\frametitle{Пример 3}
 
 	\begin{block}{Задача:}
 		Создать и установить пакеты для примера с созданием библиотек
-		и их импользования из предедущих лекций.
+		и их использования из предыдущих лекций.
 	\end{block}
 
 	Hint: libtestA, libtestB, libtestA-devel, libtestB-devel, mainpkg
