Refactored slides, mostly based on http://fedoraproject.org/wiki/How_to_create_an_RPM_package

--- a/slides/packaging/intro.tex
+++ b/slides/packaging/intro.tex
@@ -62,7 +62,7 @@
 			\item Не все, что нужно для работы программы, необходимо устанавливать на сборочной системе.
 		\end{enumerate}
 	\end{block}
-
+%TODO перенести после описания структуры каталогов
 	\begin{block}{Чистое сборочное окружение}
 		\begin{itemize}
 			\item Воспроизводимость сборки 
