--- a/slides/profile/valgrind-profile.tex
+++ b/slides/profile/valgrind-profile.tex
@@ -2,6 +2,11 @@
  \frametitle{Valgrind callgrind}
  \begin{itemize}
   \item Инструмент для профилирования \verb+ --tool=callgrind+
+  \item Просмотр результатов
+    \begin{itemize}
+      \item \texttt{kcachegrind}
+      \item \texttt{callgrind\_annotate}
+    \end{itemize}
  \end{itemize}
  \begin{center}
   Упражнение
