Moved to homework

--- a/slides/bash/branching.tex
+++ b/slides/bash/branching.tex
@@ -75,23 +75,6 @@ exit 0
 	\end{columns}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Case: практическое задание}
-
-	Написать скрипт, который будет создавать файл, 
-	записывать туда текущее время и переданную строку,
-	используя при этом следующие аргументы командной строки: 
-
-	\begin{enumerate}
-		\item -f или -{}-file <имя файла>\\
-			если отсутствует имя файла, то выйти с соответствующим сообщением;
-		\item -l или -{}-log <строка>\\
-			если отсутствует <строка>, то выйти с соответствующим сообщением;
-		\item -a или -{}-append \\
-			необязательный флаг, указывающий будет ли файл переписан, либо дописан.
-	\end{enumerate}
-
-\end{frame}
 
 \begin{frame}[fragile]
 	\frametitle{case + getopts}
@@ -142,7 +125,22 @@ done
 
 \begin{frame}
 \frametitle{Домашнее задание}
-Переписать скрипт из предыдущего задания с использованием {\tt getopt} либо {\tt getopts}.
+
+	Написать скрипт, который будет создавать файл, 
+	записывать туда текущее время и переданную строку,
+	используя при этом следующие аргументы командной строки: 
+
+	\begin{enumerate}
+		\item -f или -{}-file <имя файла>\\
+			если отсутствует имя файла, то выйти с соответствующим сообщением;
+		\item -l или -{}-log <строка>\\
+			если отсутствует <строка>, то выйти с соответствующим сообщением;
+		\item -a или -{}-append \\
+			необязательный флаг, указывающий будет ли файл переписан, либо дописан.
+	\end{enumerate}
+
+	Cкрипт должен обрабатывать переданные аргументы с использованием {\tt getopt} либо {\tt getopts}.
+
 \end{frame}
 
 \begin{frame}[fragile]
