--- a/epam/LinuxEssentials/common.tex
+++ b/epam/LinuxEssentials/common.tex
@@ -63,3 +63,22 @@
 
 %\institution[EPAM]{EPAM}
 %\logo{\includegraphics[width=1cm]{logo.png}}
+
+\AtBeginSection[]{%
+  \begin{frame}<beamer>
+    \frametitle{}
+    \tableofcontents[
+        sectionstyle=show/shaded, hideallsubsections ]
+  \end{frame}
+  \addtocounter{framenumber}{-1}% If you don't want them to affect the slide number
+}
+
+\AtBeginSubsection[]{%
+  \begin{frame}<beamer>
+    \frametitle{}
+    \tableofcontents[
+        sectionstyle=show/hide,
+        subsectionstyle=show/shaded/hide, ]
+  \end{frame}
+  \addtocounter{framenumber}{-1}% If you don't want them to affect the slide number
+}
