Added new slide to shell-intro

--- a/slides/cmdline/shell-intro.tex
+++ b/slides/cmdline/shell-intro.tex
@@ -32,7 +32,29 @@
        \end{itemize}
   \end{itemize}
 \end{frame}
-
+\begin{frame}{Встроенные команды shell и внешние команды}
+\begin{columns}
+\column{0.5\textwidth}
+\begin{center}
+{\Large Встроенные}
+\begin{itemize}
+  \item cd
+  \item echo
+  \item for ...; do ; done
+\end{itemize}
+\end{center}
+\column{0.5\textwidth}
+\begin{itemize}
+  \item ls
+  \item cp
+  \item mv
+  \item echo
+\end{itemize}
+\begin{center}
+{\Large Внешние}
+\end{center}
+\end{columns}
+\end{frame}
 \begin{frame}[fragile]{Маленькое упражнение}
 \begin{lstlisting}[language=bash]
 cat /etc/shells
