--- a/slides/cmdline/process-intro.tex
+++ b/slides/cmdline/process-intro.tex
@@ -60,44 +60,37 @@
   \end{block}
 \end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Доп. упражнение}
+  \begin{block}{proc файловая система}
+    Посмотреть вывод \verb+ ls -l /proc/$$/ +
 
-\begin{frame}{Unix way}
-  \begin{enumerate}
-    \item Пишите программы, которые делают одну вещь и делают её хорошо.
-    \item Пишите программы, которые бы работали вместе.
-    \item Пишите программы, которые бы поддерживали текстовые потоки, поскольку это универсальный интерфейс. 
-  \end{enumerate}
+    \verb+ ls -l /proc/$$/cwd; cd .. ; ls -l /proc/$$/cwd +
+    
+    \verb+ cat /proc/$$/limits; ulimit -u 200 ; cat /proc/$$/limits +
+
+  \end{block}
 \end{frame}
 
-\begin{frame}{Unix way}
-  \begin{enumerate}
-    \item   Маленькое прекрасно.
-    \item   Пусть каждая программа делает одну вещь, но хорошо.
-    \item   Собирайте прототип как можно раньше.
-    \item   Предпочитайте переносимость эффективности.
-    \item   Храните данные в простых текстовых файлах.
-    \item   Используйте программные рычаги для достижения цели.
-    \item   Используйте сценарии командной строки для улучшения функционала и переносимости.
-    \item   Избегайте <<связывающего>> (captive) пользовательского интерфейса.
-    \item   Делайте каждую программу «фильтром».
-  \end{enumerate}
-\end{frame}
 
-\begin{frame}{Конвееры}
-%  \textbf{Цель} -- максимальная модульность: большое количество простых приложений, взаимодействующих друг с другом для решения задач
-  \only<1>{
-  \begin{center}
-    \includegraphics[width=1.2in]{../../slides/cmdline/process}
-  \end{center}
-  }
-  \only<2>{
-    \begin{center}
-      \includegraphics[width=3.6in]{../../slides/cmdline/processes}
-    \end{center}
-  }
-  \begin{itemize}
-    \item <1-> Каждое приложение открывает 3 стандартных файловых дескриптора stdin (fd 0), stdout(fd 1), stderr (fd 2)
-    \item <2-> Приложения могут работать как фильтр из STDIN в STDOUT, можно объединять несколько приложений в конвейер
-    \item <2-> Синтаксис {\tt <app1> | <app2>}
-  \end{itemize}
-\end{frame}
+%\begin{frame}{Unix way}
+%  \begin{enumerate}
+%    \item Пишите программы, которые делают одну вещь и делают её хорошо.
+%    \item Пишите программы, которые бы работали вместе.
+%    \item Пишите программы, которые бы поддерживали текстовые потоки, поскольку это универсальный интерфейс. 
+%  \end{enumerate}
+%\end{frame}
+%
+%\begin{frame}{Unix way}
+%  \begin{enumerate}
+%    \item   Маленькое прекрасно.
+%    \item   Пусть каждая программа делает одну вещь, но хорошо.
+%    \item   Собирайте прототип как можно раньше.
+%    \item   Предпочитайте переносимость эффективности.
+%    \item   Храните данные в простых текстовых файлах.
+%    \item   Используйте программные рычаги для достижения цели.
+%    \item   Используйте сценарии командной строки для улучшения функционала и переносимости.
+%    \item   Избегайте <<связывающего>> (captive) пользовательского интерфейса.
+%    \item   Делайте каждую программу «фильтром».
+%  \end{enumerate}
+%\end{frame}
